new styles for test

--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -1,6 +1,6 @@
 .Card{
-    background-color: red;
-    border: 3px solid red;
+    background-color: #A42CD6;
+    border: 3px solid #C179B9;
     border-radius: 10px;
     overflow: hidden;
     margin: 10px
